--- a/index.html
+++ b/index.html
@@ -347,6 +347,8 @@
                                         <th>الوزن (كيلو)</th>
                                         <th>سعر السوق</th>
                                         <th>المبلغ الكلي</th>
+                                        <th>الملاحظات</th>
+
                                     </tr>
                                 </thead>
                                 <tbody id="historyTableBody">
@@ -829,4 +831,5 @@
 </footer>
 </body>
 </html>
+
 
